--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@
 {
    margin-bottom: -30px;
     padding: 10px 0px;
-    color: goldenrod;
+    color: #002D62;
     text-align: center;
 }
 .box-desc{
@@ -308,4 +308,89 @@
     border: none;
     background-color: goldenrod;
     color: white;
+}
+
+/* footer-styling */
+
+.fifth{
+    overflow-x: hidden ;
+    height: 60vh;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+}
+.top-tier-footer{
+    display: flex;
+    justify-content: space-around;
+}
+.footer-logo{
+    margin-top: -25px;
+    margin-bottom: 10px;
+}
+.second-tier-footer{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+.third-tier-footer{
+    display: flex;
+    justify-content: space-around;
+  
+}
+.tweet{
+    margin-left: 180px;
+ 
+}
+.airport-we-cover{
+    margin-left: 300px;
+}
+.request-a-call{
+    margin-left: 150px;
+}
+.contain-one{
+     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    /* margin-left: 300px; */
+}
+.contain-one p{
+    margin-top: 10px;
+    margin-left: 80px;
+}
+.contain-two{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    margin-top: 10px;
+    margin-left: 100px;
+}
+
+.contain-three{
+    width: 400px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+   
+}
+.footer-form{
+    margin-left: 150px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+}
+.contain-fourth p{
+    /* width: 400px; */
 }
